# VideoProject

./: README.md  build.gradle  settings.gradle
V_Base/src/androidTest/java/com/voidcom/v_base/: ExampleInstrumentedTest.kt
V_Base/src/test/java/com/voidcom/v_base/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/voidcom/videoproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/voidcom/videoproject/: GlideEngine.kt  MainActivity.kt  MainViewModel.kt  VideoApplication.kt
app/src/main/res/drawable/: ic_seekbar_click_icon.xml  ic_seekbar_icon.xml
app/src/main/res/layout/: activity_main.xml  activity_output_video_info.xml  activity_push_rtmp.xml  activity_test.xml  activity_video_crop.xml  activity_video_cut.xml  activity_video_filters.xml  activity_video_player.xml  activity_video_process.xml  fragment_filters.xml  fragment_play_control.xml  frames_item_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/voidcom/videoproject/: ExampleUnitTest.kt
buildSrc/: build.gradle.kts  config.gradle
commonRes/dimen/values-1024x552/: lay_x.xml
commonRes/dimen/values-1024x600/: lay_y.xml
commonRes/dimen/values-1024x768/: lay_y.xml
commonRes/dimen/values-1184x720/: lay_x.xml
commonRes/dimen/values-1196x720/: lay_x.xml  lay_y.xml
commonRes/dimen/values-1216x800/: lay_x.xml
commonRes/dimen/values-1280x737/: lay_x.xml  lay_y.xml
commonRes/dimen/values-1812x1080/: lay_x.xml  lay_y.xml
commonRes/dimen/values-1920x1128/: lay_y.xml
commonRes/dimen/values-1920x1200/: lay_x.xml  lay_y.xml
commonRes/dimen/values-2392x1440/: lay_x.xml  lay_y.xml
commonRes/dimen/values-2560x1600/: lay_x.xml  lay_y.xml
commonRes/dimen/values-320x240/: lay_x.xml  lay_y.xml
commonRes/dimen/values-480x320/: lay_x.xml  lay_y.xml
commonRes/dimen/values-800x480/: lay_y.xml
commonRes/dimen/values-800x600/: lay_x.xml
commonRes/dimen/values-854x540/: lay_x.xml
commonRes/dimen/values-960x540/: lay_x.xml  lay_y.xml
ffmpegLib/: build.gradle
ffmpegLib/src/main/: AndroidManifest.xml
ffmpegLib/src/main/cpp/: CMakeLists.txt  NativePlayer.cpp  NativePlayer.h  ffmpeg_cmd.cpp  ffmpeg_cmd.h  ffmpeg_decoder_jni.cpp  ffmpeg_decoder_jni.h  ffprobe_cmd.cpp  ffprobe_cmd.h
ffmpegLib/src/main/cpp/define/: ErrorCodeDefine.h  default_code.cpp  default_code.h  linked_list_define.cpp  linked_list_define.h  logger.cpp  logger.h
ffmpegLib/src/main/cpp/ffmpeg/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffprobe.c  ffprobe.h  run_callback.c  run_callback.h
ffmpegLib/src/main/cpp/include/: x264_config.h
ffmpegLib/src/main/cpp/include/libavutil/: ffversion.h  timer.h
ffmpegLib/src/main/java/com/voidcom/ffmpeglib/: CommandModeCallback.kt  (+4 more)
ffmpeglib/: build.gradle
ffmpeglib/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libPushVideo/: build.gradle.kts
libPushVideo/src/main/: AndroidManifest.xml
libPushVideo/src/main/cpp/: AudioStream.cpp  AudioStream.h  CMakeLists.txt  PacketQueue.h  PushInterface.h  RtmpPusher.cpp  VideoStream.cpp  VideoStream.h
libPushVideo/src/main/cpp/define/: logger.h
libPushVideo/src/main/cpp/rtmp/: CMakeLists.txt  amf.c  amf.h  log.c  rtmp.c  rtmp.cpp  rtmp.h
libSDKBase/: build.gradle.kts
libSDKBase/src/main/: AndroidManifest.xml
v_Base/: build.gradle
v_Base/src/main/: AndroidManifest.xml
v_Base/src/main/res/layout/: activity_empty.xml  activity_permission.xml
v_Base/src/main/res/values/: color.xml  strings.xml
(+114 files in other folders)
